[tool.poetry]
name = 'dsc180'
version = '0.0.0'
description = ''
authors = ['Your Name <you@example.com>']

[tool.poetry.dependencies]
python = '~3.8.0'
autogluon = '0.0.15'
editdistance = '>=0.6.0'
joblib = '~=0.14.1'
mxnet = '~=1.8.0.post0'
nltk = '>=3.6.5'
numba = '>=0.28'
numpy = '>=1.19.5'
pandas = '>=1.3.3'
scikit-learn = '>=0.22.2.post1,<0.23'
tensorflow-data-validation = '~=1.4.0'
tensorflow = '~=2.7.0'
urllib3 = '>=1.26.7'
scipy = "~=1.7.3"
statsmodels = "^0.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
